# ChondritesViewer

./: .gitignore  CMakeLists.txt  README.md  build.sh  convert.py  pyproject.toml  run.sh
notebook/: Labels.ipynb  PatchCNN.ipynb  README.md  Spectre5x5.ipynb  Stats.ipynb  Watershed.ipynb
notebook/old/: utils.py
notebook/old/kmeansBSE/: bseKmeans.py
notebook/old/quotientMgCaFe/: quotient.py
notebook/results/EarlyCNN_trial19_20260118-035441/: hp.json  lcnn_weights.pth
notebook/src/: lissage.py  metrics.py  model.py  utils.py
resources/: lcnn_weights.pth  project.json  project1.json
resources/shaders/: gray.frag  image.frag  image.vert
resources/shaders/paint/: brush.frag  brush.vert  overlay.frag  overlay.vert  paint_brush.frag  paint_brush.vert
resources/style/: style.css
src/: ImageLabel.cpp  ImageLabel.h  ImageLoader.cpp  ImageLoader.h  ImageTileLoader.cpp  ImageTileLoader.h  ImageTransform.h  ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h  PaintLabel.cpp  PaintLabel.h  SharedGLResources.cpp  SharedGLResources.h  SyncController.cpp  SyncController.h  main.cpp
src/modules/: ImageLabel.cpp  ImageLabel.h  ModuleBase.cpp  ModuleBase.h  PaintLabel.cpp  PaintLabel.h  PaintVImage.cpp  PaintVImage.h
src/widgets/: CollapsibleWidget.cpp  CollapsibleWidget.h  ColorLabelList.cpp  ColorLabelList.h
viewer/: imageLoader.py  logger.py  main.py  mainWindow.py  sharedGLResources.py
viewer/back/: cnn.py  inferenceWorker.py  models.py  pipeline.py  watershed.py
viewer/layers/: __init__.py  imageLabelLayer.py  imagePredLayer.py  layer.py  paintImageLayer.py  paintLabelLayer.py
viewer/resources/: project.json
viewer/resources/shaders/: image-trans.frag  image.frag
viewer/resources/shaders/paint/: brush.vert  overlay.frag  overlay.vert
viewer/widgets/: __init__.py  collapsibleWidget.py  colorLabelList.py  sidebarWidget.py  viewGridWidget.py  viewerWidget.py
