[project]
name = "viewer2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "napari[pyqt5]>=0.6.6",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pyside6>=6.10.0",
    "pyvips>=3.0.0",
    "rich>=14.2.0",
    "torch>=2.9.0",
]
