[project]
name = "viewer2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "lazypredict>=0.2.16",
    "matplotlib>=3.10.7",
    "napari[pyqt5]>=0.6.6",
    "notebook>=7.5.2",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pyside6>=6.10.0",
    "pyvips>=3.0.0",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
]
